--- a/HumanResources/ClientApp/package.json
+++ b/HumanResources/ClientApp/package.json
@@ -12,47 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.0.0",
-    "@angular/common": "11.0.0",
-    "@angular/compiler": "11.0.0",
-    "@angular/core": "11.0.0",
-    "@angular/forms": "11.0.0",
-    "@angular/platform-browser": "11.0.0",
-    "@angular/platform-browser-dynamic": "11.0.0",
-    "@angular/platform-server": "11.0.0",
-    "@angular/router": "11.0.0",
+    "@angular/animations": "11.0.2",
+    "@angular/common": "11.0.2",
+    "@angular/compiler": "11.0.2",
+    "@angular/core": "11.0.2",
+    "@angular/forms": "11.0.2",
+    "@angular/platform-browser": "11.0.2",
+    "@angular/platform-browser-dynamic": "11.0.2",
+    "@angular/platform-server": "11.0.2",
+    "@angular/router": "11.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.3",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.0",
     "jquery": "3.5.1",
+    "node-sass": "^5.0.0",
     "oidc-client": "^1.10.1",
     "popper.js": "^1.16.0",
+    "protractor": "~7.0.0",
     "rxjs": "^6.6.3",
-    "zone.js": "0.11.3"
+    "ts-node": "~9.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.1",
-    "@angular/cli": "^11.0.1",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
-    "@types/jasmine": "~3.6.1",
+    "@angular-devkit/build-angular": "^0.1100.2",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^11.0.2",
+    "@angular/language-service": "^11.0.2",
+    "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~14.14.7",
+    "@types/node": "~14.14.10",
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "typescript": "4.0.5"
+    "typescript": "4.0.2"
   },
   "optionalDependencies": {
     "node-sass": "^5.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~5.20.1"
+    "ts-node": "~9.0.0"
   }
 }
