--- a/HumanResources/ClientApp/package.json
+++ b/HumanResources/ClientApp/package.json
@@ -12,43 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.1.0",
-    "@angular/common": "11.1.0",
-    "@angular/compiler": "11.1.0",
-    "@angular/core": "11.1.0",
-    "@angular/forms": "11.1.0",
-    "@angular/platform-browser": "11.1.0",
-    "@angular/platform-browser-dynamic": "11.1.0",
-    "@angular/platform-server": "11.1.0",
-    "@angular/router": "11.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
-    "bootstrap": "^4.6.0",
-    "core-js": "^3.8.3",
-    "jquery": "3.5.1",
-    "popper.js": "^1.16.0",
-    "protractor": "~7.0.0",
-    "rxjs": "^6.6.3",
-    "ts-node": "~9.1.1"
+    "@angular/animations": "11.1.1",
+    "@angular/common": "11.1.1",
+    "@angular/compiler": "11.1.1",
+    "@angular/core": "11.1.1",
+    "@angular/forms": "11.1.1",
+    "@angular/localize": "11.1.1",
+    "@angular/platform-browser": "11.1.1",
+    "@angular/platform-browser-dynamic": "11.1.1",
+    "@angular/platform-server": "11.1.1",
+    "@angular/router": "11.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
+    "bootstrap": "^4.5.0",
+    "core-js": "3.8.3",
+    "jquery": "^3.5.1",
+    "popper.js": "1.16.0",
+    "protractor": "7.0.0",
+    "rxjs": "6.6.3",
+    "ts-node": "9.1.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.0",
-    "@angular/cli": "^11.1.0",
-    "@angular/compiler-cli": "^11.1.0",
-    "@angular/language-service": "^11.1.0",
-    "@types/jasmine": "~3.6.3",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~14.14.22",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "@angular-devkit/build-angular": "0.1101.2",
+    "@angular/cli": "11.1.2",
+    "@angular/compiler-cli": "11.1.1",
+    "@angular/language-service": "11.1.1",
+    "@angular/localize": "11.1.1",
+    "@types/jasmine": "3.6.3",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.14.22",
+    "bootstrap": "4.6.0",
+    "codelyzer": "6.0.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
     "typescript": "4.1.3"
   },
   "optionalDependencies": {
-    "protractor": "~7.0.0",
-    "ts-node": "~9.1.1"
+    "protractor": "7.0.0",
+    "ts-node": "9.1.1"
   }
 }
