--- a/HumanResources/ClientApp/package.json
+++ b/HumanResources/ClientApp/package.json
@@ -12,35 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.1.1",
-    "@angular/common": "11.1.1",
-    "@angular/compiler": "11.1.1",
-    "@angular/core": "11.1.1",
-    "@angular/forms": "11.1.1",
-    "@angular/localize": "11.1.1",
-    "@angular/platform-browser": "11.1.1",
-    "@angular/platform-browser-dynamic": "11.1.1",
-    "@angular/platform-server": "11.1.1",
-    "@angular/router": "11.1.1",
+    "@angular/animations": "11.2.1",
+    "@angular/common": "11.2.1",
+    "@angular/compiler": "11.2.1",
+    "@angular/core": "11.2.1",
+    "@angular/forms": "11.2.1",
+    "@angular/localize": "11.2.1",
+    "@angular/platform-browser": "11.2.1",
+    "@angular/platform-browser-dynamic": "11.2.1",
+    "@angular/platform-server": "11.2.1",
+    "@angular/router": "11.2.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "bootstrap": "^4.5.0",
-    "core-js": "3.8.3",
+    "core-js": "3.9.0",
     "jquery": "^3.5.1",
     "popper.js": "1.16.0",
-    "protractor": "7.0.0",
-    "rxjs": "6.6.3",
-    "ts-node": "9.1.1"
+    "rxjs": "6.6.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1101.2",
-    "@angular/cli": "11.1.2",
-    "@angular/compiler-cli": "11.1.1",
-    "@angular/language-service": "11.1.1",
-    "@angular/localize": "11.1.1",
+    "@angular-devkit/build-angular": "0.1102.1",
+    "@angular/cli": "11.2.1",
+    "@angular/compiler-cli": "11.2.1",
+    "@angular/language-service": "11.2.1",
+    "@angular/localize": "11.2.1",
     "@types/jasmine": "3.6.3",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.14.22",
+    "@types/node": "14.14.28",
     "bootstrap": "4.6.0",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.6.0",
@@ -49,7 +47,7 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
-    "typescript": "4.1.3"
+    "typescript": "4.1.5"
   },
   "optionalDependencies": {
     "protractor": "7.0.0",
