--- a/HumanResources/ClientApp/package.json
+++ b/HumanResources/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.4.0",
     "core-js": "3.9.0",
     "jquery": "^3.5.1",
     "popper.js": "1.16.0",
