--- a/HumanResources/ClientApp/package.json
+++ b/HumanResources/ClientApp/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "11.2.1",
+    "@angular/cdk": "^11.2.3",
     "@angular/common": "11.2.1",
     "@angular/compiler": "11.2.1",
     "@angular/core": "11.2.1",
@@ -22,12 +23,14 @@
     "@angular/platform-browser-dynamic": "11.2.1",
     "@angular/platform-server": "11.2.1",
     "@angular/router": "11.2.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.4.0",
     "core-js": "3.9.0",
     "jquery": "^3.5.1",
+    "mdb-angular-ui-kit": "^1.0.0-alpha3",
     "popper.js": "1.16.0",
     "rxjs": "6.6.3"
   },
